--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"sharp": "^0.34.3",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.1",
+		"vite-console-forward-plugin": "^2.0.1",
 		"vite-plugin-arraybuffer": "^0.1.0",
 		"vite-plugin-hmrify": "^0.1.0"
 	},
