--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"p5": "1",
 		"p5-frame-capturer": "^0.4.2",
 		"pixelsort": "link:pixelsort/pkg",
+		"rand-seed": "^3.0.0",
 		"ts-pattern": "^5.8.0",
 		"vite-plugin-wasm": "^3.5.0"
 	},
